--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
     <head>
         <title>Primeira Página Web</title>
+        <meta name=“keywords” content=“Aprendiz, Início, Primeira Página”>
+        <meta name=“description” content=“Minha primeira página” />
+        <meta name=“author” content=“Nathan Andrade”>
+        <meta http-equiv=“refresh” content=“50s” />
+        <meta charset=“UTF-8”/>
     </head>
     <body>
-        <h1>Minha primeira página Web</h1>
-        <p>Aqui vai um parágrafo</p>
+        <h3>Minha primeira página Web</h3>
+        <p>Aqui vai um<br/>parágrafo</p>
         <img src="https://static.omelete.uol.com.br/media/extras/conteudos/Lady_EPPVKyw_uXGd12K.jpg"/>
     </body>
 </html>
